# ml-notes

./: .gitignore
courses/hf-nlp/: pyproject.toml
courses/hf-nlp/hf_nlp/: chapter01.ipynb  chapter01.py
